got server to run

--- a/.env.local
+++ b/.env.local
@@ -1,7 +1,10 @@
 SPOTIFY_CLIENT_SECRET=
 SPOTIFY_CLIENT_ID=
 OPENAI_API_KEY=
-MONGO_URI=
+CLIENT_URL=http://localhost:3000
+API_BASE_URL=http://localhost:3002
+JWT_SECRET=test-secret-key # make this secure in production
+MONGO_URI=mongodb://localhost:28017
 PORT=3002
 PROXY_LIST_URL=url to return a list of proxies for yt-dlp. the response must be proxies separated by /r/n
 INITIAL_TRACK_IDS=comma separated list of spotify track ids to seed the database with
