--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "setup-audio": "mkdir -p ./audio && rm -rf ./audio/*",
-    "start:local": "npm run setup-audio && node --expose-gc --env-file=.env src/index.js",
+    "setup-audio": "mkdir audio && rmdir /S /Q audio && mkdir audio",
+    "start:local": "npm run setup-audio && node --expose-gc --env-file=.env.local src/index.js",
     "start": "npm run setup-audio && node --expose-gc --optimize_for_size --max_old_space_size=460 src/index.js",
-    "mongo": "mkdir -p db && mongod --dbpath db --port 28017",
+    "mongo:local": "mkdir db && \"C:\\Program Files\\MongoDB\\Server\\<version>\\bin\\mongod.exe\" --dbpath db --port 28017",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "format": "prettier --write \"**/*.{js,json,css,md}\""
